[tool.poetry]
name = "poke-api"
version = "0.1.0"
description = ""
authors = ["Danilo e Arismar"]
license = "MIT"
readme = "README.md"
packages = [{include = "poke_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
